syntax = "proto3";

option java_multiple_files = true;

package Catalyst.Protocol.Rpc.Node;

message PingRequest {
    bool ping = 1;
}

message PongResponse {
    bool pong = 2;
}

message VersionRequest {
    bool query = 1;
}

message VersionResponse {
    string version = 1;
}

message GetInfoRequest {
    bool query = 1;
}

message GetInfoResponse {
    string query = 1;
}

message CreateWalletRequest {
    bool query = 1;
}

message CreateWalletResponse {
    string query = 1;
}

message ListWalletRequest {
    bool query = 1;
}

message ListWalletResponse {
    string query = 1;
}

message CreateAddressRequest {
    bool query = 1;
}

message CreateAddressResponse {
    string query = 1;
}

message GetAddressRequest {
    bool query = 1;
}

message GetAddressResponse {
    string query = 1;
}

message ListAddressRequest {
    bool query = 1;
}

message ListAddressResponse {
    string query = 1;
}

message ValidateAddressRequest {
    bool query = 1;
}

message ValidateAddressResponse {
    string query = 1;
}

message GetBalanceRequest {
    bool query = 1;
}

message GetBalanceResponse {
    string query = 1;
}

message CreateRawTransactionRequest {
    bool query = 1;
}

message CreateRawTransactionResponse {
    string query = 1;
}

message SignRawTransactionRequest {
    bool query = 1;
}

message SignRawTransactionResponse {
    string query = 1;
}

message DecodeRawTransactionRequest {
    bool query = 1;
}

message DecodeRawTransactionResponse {
    string query = 1;
}

message BroadcastRawTransactionRequest {
    bool query = 1;
}

message BroadcastRawTransactionResponse {
    string query = 1;
}

message SendToRequest {
    bool query = 1;
}

message SendToResponse {
    string query = 1;
}

message SendToFromRequest {
    bool query = 1;
}

message SendToFromResponse {
    string query = 1;
}

message SendManyRequest {
    bool query = 1;
}

message SendManyResponse {
    string query = 1;
}

message SendFromManyRequest {
    bool query = 1;
}

message SendFromManyResponse {
    string query = 1;
}

message AddNodeRequest {
    bool query = 1;
}

message AddNodeResponse {
    string query = 1;
}

message GetPeerListRequest {
    bool query = 1;
}

message GetPeerListResponse {
    string query = 1;
}

message GetPeerInfoRequest {
    bool query = 1;
}

message GetPeerInfoResponse {
    string query = 1;
}

message GetConnectionCountRequest {
    bool query = 1;
}

message GetConnectionCountResponse {
    string query = 1;
}

message GetDeltaRequest {
    bool query = 1;
}

message GetDeltaResponse {
    string query = 1;
}

message GetMempoolRequest {
    bool query = 1;
}

message GetMempoolResponse {
    map<string, string> info = 1;
}

message SignMessageRequest {
    bool query = 1;
}

message SignMessageResponse {
    string query = 1;
}

message VerifyMessageRequest {
    bool query = 1;
}

message VerifyMessageResponse {
    string query = 1;
}

message ServiceStatusRequest {
    bool query = 1;
}

message ServiceStatusResponse {
    string query = 1;
}
